kubernetes/argo-cd/projects/aws/production-hm/mlflow/environments/production/kubernetes-manifests/hm-mlflow-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-mlflow-ingress
  namespace: production-hm-mlflow
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: mlflow.hongbomiao.com
  labels:
    app.kubernetes.io/name: mlflow-ingress
    app.kubernetes.io/part-of: production-hm-mlflow
spec:
  rules:
    - host: mlflow.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-mlflow-tracking
                port:
                  number: 80
  tls:
    - hosts:
        - mlflow.hongbomiao.com
      secretName: hm-mlflow-certificate
